# mind-swarm

./: .env.example  .gitignore  AGENTS.md  BUG_FIXES.md  CLAUDE.md  FIXES_APPLIED.md  MEMORY_SYSTEM_MIGRATION.md  MIGRATION_SUMMARY.md  README.md  ai_presets.yaml  chromadb_start.sh  chromadb_status.sh  chromadb_stop.sh  clean_subspace.sh  clean_subspace_dry_run.sh  enter_cyber_rootfs.sh  fix_json_encoding.py  fix_libmagic.sh  hivemind-design-doc.md  improvements_list.md  manage_cyber_rootfs.sh  memory-id-agent-usage-example.py  memory-id-analysis.md  memory-id-implementation-example.py  mind-swarm.10x  mind-swarm.code-workspace  mindswarm-design-doc.md  mindswarm-ui-design.md  pyproject.toml  reset-subspace.sh  run.sh  setup.sh  setup_chromadb.sh  setup_cyber_rootfs.sh  test_action_system.py  test_agent_spawn.py  test_cbr_fix.py  test_graceful_shutdown.py  test_io_network.msg  test_io_network.py  (+8 more)
config/: blacklist_models.yaml  cerebras_models.yaml  curated_models.yaml  openai_models.yaml  openrouter_models.yaml  subspace_sync.yaml
docs/: AGENT_WORLD.md  AGENT_WORLDVIEW.md  COGNITIVE_ARCHITECTURE.md  IO_AGENT_DESIGN.md  MINDSWARM_2D_UI_DESIGN.md  PYTHON_SCRIPT_EXECUTION.md  SUBSPACE_MANAGEMENT.md  agent-actions-enhancement-ideas.md  base-code-copy-fix.md  cbr_error_resolution_system.md  cognitive-loop-consolidation.md  cognitive-loop-fix.md  community_tasks_folder_organization.md  compute-actions-examples.md  cyber_terminal_implementation_plan.md  dev-multi-repo.md  events.md  file-memory-integration-proposal.md  knowledge_management.md  memory-system-implementation.md  memory-system-sandbox-integration.md  memory_id_redesign.md  mindswarm-design-doc.md  mindswarm-knowledge-system.md  mindswarm-ui-design.md  oodia-test-example.md  plan_task_biofeedback_v1.md  plan_task_biofeedback_v2.md  task_biofeedback.md
dynamic_dspy_research/: Deployment Guide - Generic DSPy Protocol System.md  Generic DSPy Protocol Design.md  Generic DSPy Protocol System - Deliverables.md  Generic DSPy Protocol System.md  brain_client.py  dspy_signature_server.py  generic_brain_protocol.py  test_examples.py  todo.md  usage_example.py
scripts/: cleanup_old_structure.py  demo_memory_system.py  dev.sh  export_knowledge.py  (+8 more)
(+241 files in other folders)
